src/test/ui/borrowck/borrowck-break-uninit.nll.stderr
error[E0381]: borrow of possibly uninitialized variable: `x`
  --> $DIR/borrowck-break-uninit.rs:9:20
   |
LL |     println!("{}", x);
   |                    ^ use of possibly uninitialized `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
